CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/sfrosit_t_emplmt_income_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_emplmt_income_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_emplmt_income_hist</externalName>
    <label>Employment Income History</label>
    <pluralLabel>Employment Income History</pluralLabel>
</CustomObject>