CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/amt_exp_annual_actual__c.field-meta.xml
<CustomField>
    <fullName>amt_exp_annual_actual__c</fullName>
    <description>amt_exp_annual_actual</description>
    <externalDeveloperName>amt_exp_annual_actual</externalDeveloperName>
    <label>Actual Annual Expenses</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>