CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/cde_freq_pay_estmd__c.field-meta.xml
<CustomField>
    <fullName>cde_freq_pay_estmd__c</fullName>
    <description>cde_freq_pay_estmd</description>
    <externalDeveloperName>cde_freq_pay_estmd</externalDeveloperName>
    <label>Estimated Frequency Pay Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>