CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/cnt_week_per_hours_actual__c.field-meta.xml
<CustomField>
    <fullName>cnt_week_per_hours_actual__c</fullName>
    <description>cnt_week_per_hours_actual</description>
    <externalDeveloperName>cnt_week_per_hours_actual</externalDeveloperName>
    <label>Actual Hours per Week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>