CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/idn_emplmt_income__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_income__c</fullName>
    <description>idn_emplmt_income</description>
    <externalDeveloperName>idn_emplmt_income</externalDeveloperName>
    <label>Income ID</label>
    <length>50</length>
    <referenceTargetField>T_EMPLMT_INCOME__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_EMPLMT_INCOME__c</referenceTo>
    <relationshipLabel>Employment Income Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_emplmt_income_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>