CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/idn_emplmt_income_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_income_hist__c</fullName>
    <description>idn_emplmt_income_hist</description>
    <externalDeveloperName>idn_emplmt_income_hist</externalDeveloperName>
    <label>Income ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>