CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/idn_emplmt_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_emplmt_indiv__c</fullName>
    <description>idn_emplmt_indiv</description>
    <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
    <label>Employment Individual ID</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>