CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/ind_stubs_pay_sufft__c.field-meta.xml
<CustomField>
    <fullName>ind_stubs_pay_sufft__c</fullName>
    <description>ind_stubs_pay_sufft</description>
    <externalDeveloperName>ind_stubs_pay_sufft</externalDeveloperName>
    <label>Pay Stubs</label>
    <length>1</length>
    <type>Text</type>
</CustomField>