CHATS_SIT/force-app/main/default/objects/sfrosit_t_emplmt_income_hist__x/fields/nbr_seq_income_emplmt__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_income_emplmt__c</fullName>
    <description>nbr_seq_income_emplmt</description>
    <externalDeveloperName>nbr_seq_income_emplmt</externalDeveloperName>
    <label>Employment Income Number Sequence</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>